# parallel-string-sorting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
liblfds/: CMakeLists.txt
liblfds/inc/: liblfds611.h
libzio/: CMakeLists.txt  Makefile  README  fzopen.3.in  lzw.h  tests.c  testt.c  unlzw.c  zio.c  zio.h  zio.map  zioP.h
minitbb/: CMakeLists.txt
minitbb/src/: cache_aligned_allocator.cpp  concurrent_monitor.cpp  concurrent_monitor.h  concurrent_queue.cpp  dynamic_link.cpp  dynamic_link.h  itt_notify.cpp  itt_notify.h  semaphore.cpp  semaphore.h  tbb_assert_impl.h  tbb_misc.cpp  tbb_misc.h  tbb_version.h  version_string.ver
minitbb/src/tbb/: version_string.ver
minitbb/tbb/: aligned_space.h  atomic.h  cache_aligned_allocator.h  concurrent_queue.h  spin_mutex.h  tbb_allocator.h  tbb_config.h  tbb_exception.h  tbb_machine.h  tbb_profiling.h  tbb_stddef.h
minitbb/tbb/internal/: _concurrent_queue_impl.h
minitbb/tbb/machine/: gcc_generic.h  gcc_ia32_common.h  ibm_aix51.h  icc_generic.h  linux_common.h  linux_ia32.h  linux_ia64.h  linux_intel64.h  mac_ppc.h  macos_common.h  mic_common.h  msvc_ia32_common.h  sunos_sparc.h  windows_api.h  windows_ia32.h  windows_intel64.h  xbox360_ppc.h
src/: CMakeLists.txt  config.h.in  psstest.cc  psstest.cpp
src/eberle/parallel/: eberle-parallel-lcp-loosertree-mergesort.h  eberle-parallel-lcp-losertree-mergesort.h  eberle-ps5-parallel-toplevel-merge-lcpstrptr.h  eberle-ps5-parallel-toplevel-merge.h
src/eberle/sequential/: eberle-lcp-losertree-mergesort-lcpstrptr.h  eberle-lcp-losertree-mergesort.h  eberle-lcp-mergesort.h  eberle-losertree-mergesort.h  eberle-mergesort-lcp-losertree-lcpstrptr.h  eberle-mergesort-lcp-losertree.h  eberle-mergesort-lcp.h  eberle-mergesort-losertree.h  eberle-mergesort.h
src/eberle/utils/: eberle-inssort-lcp.h  lcp-string-losertree-lcpstrptr.h  lcp-string-losertree.h  string-losertree.h  types.h  (+2 more)
src/lcp-merge-string-sort/: errwrt.h  glue.cc  lcpsrtMT.c  mrgc.asm  mrgc.s
src/parallel/: akiba-parallel_string_radix_sort.cc  akiba-parallel_string_radix_sort.cpp  bingmann-parallel_mkqs.cc  bingmann-parallel_mkqs.cpp  bingmann-parallel_mkqs.hpp  bingmann-parallel_radix_sort.cc  bingmann-parallel_radix_sort.cpp  bingmann-parallel_radix_sort.hpp  bingmann-parallel_radix_sort1.cc  bingmann-parallel_radix_sort2.cc  bingmann-parallel_radix_sort3.cc  bingmann-parallel_sample_sort.cc  bingmann-parallel_sample_sort.cpp  bingmann-parallel_sample_sort.h  bingmann-parallel_sample_sort.hpp  bingmann-parallel_sample_sort1.cc  bingmann-parallel_sample_sortBS.cc  bingmann-parallel_sample_sortBSC.cc  bingmann-parallel_sample_sortBSCA.cc  bingmann-parallel_sample_sortBT.cc  bingmann-parallel_sample_sortBTC.cc  bingmann-parallel_sample_sortBTC.h  bingmann-parallel_sample_sortBTCE.cc  bingmann-parallel_sample_sortBTCE.h  bingmann-parallel_sample_sort_equal.h  bingmann-parallel_sample_sort_equal.hpp  bingmann-parallel_sample_sort_lcp.cc  bingmann-parallel_sample_sort_lcp.cpp  bingmann-parallel_sample_sort_lcp.hpp  bingmann-parallel_sample_sort_treecalc.h  bingmann-parallel_sample_sort_treecalc.hpp  eberle-parallel-lcp-merge-binary-splitting.h  eberle-parallel-lcp-merge-binary-splitting.hpp  eberle-parallel-lcp-merge-lcp-splitting.h  eberle-parallel-lcp-merge-lcp-splitting.hpp  eberle-parallel-lcp-merge-standard-splitting.h  eberle-parallel-lcp-merge-standard-splitting.hpp  eberle-parallel-lcp-merge.h  eberle-parallel-lcp-merge.hpp  eberle-parallel-lcp-mergesort.h  (+5 more)
src/rantala/: burstsort.cc  burstsort.cpp  burstsort.h  burstsort2.cc  burstsort2.cpp  burstsort2.h  burstsort_mkq.cc  burstsort_mkq.cpp  burstsort_mkq.h  debug.h  funnelsort.cc  funnelsort.cpp  funnelsort.h  get_char.h  insertion_sort.h  losertree.h  mergesort.cc  mergesort.cpp  mergesort.h  mergesort_lcp.cc  mergesort_lcp.cpp  mergesort_lcp.h  mergesort_losertree.cc  mergesort_losertree.h  mergesort_unstable.cc  mergesort_unstable.cpp  mergesort_unstable.h  mkqs.h  msd_a.h  msd_a2.h  msd_ce.h  msd_ce.hpp  msd_ci.h  msd_ci.hpp  msd_dyn_block.h  msd_dyn_block.hpp  msd_dyn_vector.h  msd_lsd.h  multikey_block.cc  multikey_block.cpp  (+18 more)
src/sequential/: bingmann-lcp-mergesort.cc  bingmann-lcp-mergesort.cpp  bingmann-lcp_inssort.h  bingmann-lcp_inssort.hpp  bingmann-lcp_losertree.hpp  bingmann-lcp_mergesort.hpp  bingmann-lcp_mergesort_binary.hpp  bingmann-lcp_mergesort_kway.cpp  bingmann-lcp_mergesort_kway.hpp  bingmann-mkqs.hpp  bingmann-qsort.cc  bingmann-qsort.cpp  bingmann-radix_sort.h  bingmann-radix_sort.hpp  bingmann-sample_sort.cpp  bingmann-sample_sort.h  bingmann-sample_sort.hpp  bingmann-sample_sortBS.cpp  bingmann-sample_sortBS.h  bingmann-sample_sortBS.hpp  bingmann-sample_sortBSC.cpp  bingmann-sample_sortBSC.h  bingmann-sample_sortBSC.hpp  bingmann-sample_sortBT.cpp  bingmann-sample_sortBT.h  bingmann-sample_sortBT.hpp  bingmann-sample_sortBTC.cpp  bingmann-sample_sortBTC.h  bingmann-sample_sortBTC.hpp  bingmann-sample_sortBTCE.cpp  bingmann-sample_sortBTCE.h  bingmann-sample_sortBTCE.hpp  bingmann-sample_sortBTCT.hpp  bingmann-sample_sortRBTCE.cpp  bingmann-sample_sortRBTCE.h  bingmann-sample_sortRBTCE.hpp  bingmann-sample_sort_common.hpp  bingmann-sample_sort_tree_builder.hpp  bingmann-stdsort.cpp  bs-mkqs.h  (+35 more)
src/sinha-copy-burstsort/: C-burstsort.c  CP-burstsort.c  CPL-burstsort.c  README  copy-burstsort.c  copy.h  glue.cc  glue.cpp  makefile  utils.c
src/tools/: agglogger.h  agglogger.hpp  checker.h  checker.hpp  clock_timer.h  contest.h  contest.hpp  debug.h  debug.hpp  eberle-lcp-losertree.h  eberle-lcp-losertree.hpp  eberle-utilities.h  eberle-utilities.hpp  globals.cpp  globals.hpp  input.h  input.hpp  jobqueue.h  jobqueue.hpp  lcgrandom.h  lcgrandom.hpp  lockfree.h  lockfree.hpp  logfloor.h  logfloor.hpp  malloc_count.c  malloc_count.h  membuffer.h  membuffer.hpp  memprofile.h  memprofile.hpp  stack_count.c  stack_count.h  stats_writer.h  stats_writer.hpp  statsfile.h  stringptr.h  stringptr.hpp  stringset.hpp  stringtools.h  (+5 more)
tests/: CMakeLists.txt  test-bingmann-generic.cpp  test-bingmann-parallel_sample_sort.cpp  test-bingmann-simple.cpp
(+19 files in other folders)
